@@ -278,6 +278,9 @@ Release 2.5.0 - UNRELEASED
     HDFS-3087. Decomissioning on NN restart can complete without blocks being
     replicated. (Rushabh S Shah via kihwal)
 
+    HDFS-6162. Format strings should use platform independent line separator.
+    (suresh)
+
 Release 2.4.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
